moved krb/tls options to listener tag

--- a/doc/admin/parts/sqlrelay-comprehensive.conf
+++ b/doc/admin/parts/sqlrelay-comprehensive.conf
@@ -10,7 +10,7 @@
 		fakeinputbindvariables="no" translatebindvariables="no" isolationlevel="read committed"
 		ignoreselectdatabase="no" waitfordowndatabase="yes">
 		<listeners>
-			<listener port="9000" socket="/tmp/example.socket"/>
+			<listener port="9000" socket="/tmp/example.socket" addresses="0.0.0.0"/>
 		</listeners>
 		<session>
 			<start>
