--- a/doc/admin/parts/sqlrelay-krb.conf
+++ b/doc/admin/parts/sqlrelay-krb.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="example" krb="yes" krbservice="sqlrelay" krbkeytab="/usr/local/firstworks/etc/sqlrelay.keytab">
+	<instance id="example">
+		<listeners>
+			<listener krb="yes" krbservice="sqlrelay" krbkeytab="/usr/local/firstworks/etc/sqlrelay.keytab"/>
+		</listener>
 		<auths>
 			<auth module="sqlrclient_userlist">
 				<user user="dmuse@KRB.FIRSTWORKS.COM"/>
