--- a/doc/admin/parts/sqlrelay-tls-validate.conf
+++ b/doc/admin/parts/sqlrelay-tls-validate.conf
@@ -1,10 +1,12 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="example"
-		tls="yes"
-		tlscert="/usr/local/firstworks/etc/sqlrserver.pem"
-		tlsvalidate="yes"
-		tlsca="/usr/local/firstworks/etc/myca.pem">
+	<instance id="example">
+		<listeners>
+			<listener tls="yes"
+				tlscert="/usr/local/firstworks/etc/sqlrserver.pem"
+				tlsvalidate="yes"
+				tlsca="/usr/local/firstworks/etc/myca.pem"/>
+		</listeners>
 		<auths>
 			<auth module="sqlrclient_userlist">
 				<user user="sqlrclient1.firstworks.com"/>
