--- a/doc/admin/parts/sqlrelay-tls.conf
+++ b/doc/admin/parts/sqlrelay-tls.conf
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <instances>
-	<instance id="example" tls="yes" tlscert="/usr/local/firstworks/etc/sqlrserver.pem">
+	<instance id="example">
+		<listeners>
+			<listener tls="yes" tlscert="/usr/local/firstworks/etc/sqlrserver.pem"/>
+		</listeners>
 		<connections>
 			<connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
