added mysql/postgresql connectstrings modules

--- a/src/auths/Makefile
+++ b/src/auths/Makefile
@@ -16,8 +16,10 @@ all-base: $(SQLR)auth_sqlrclient_connectstrings.$(LIBEXT) \
 		$(SQLR)auth_sqlrclient_userlist.$(LIBEXT) \
 		$(SQLR)auth_sqlrclient_database.$(LIBEXT) \
 		$(SQLR)auth_sqlrclient_proxied.$(LIBEXT) \
+		$(SQLR)auth_mysql_connectstrings.$(LIBEXT) \
 		$(SQLR)auth_mysql_userlist.$(LIBEXT) \
 		$(SQLR)auth_mysql_database.$(LIBEXT) \
+		$(SQLR)auth_postgresql_connectstrings.$(LIBEXT) \
 		$(SQLR)auth_postgresql_userlist.$(LIBEXT) \
 		$(SQLR)auth_oracle_userlist.$(LIBEXT) \
 		$(SQLR)auth_teradata_sidechannel.$(LIBEXT) \
@@ -43,11 +45,17 @@ $(SQLR)auth_sqlrclient_proxied.$(LIBEXT): sqlrclient_proxied.cpp sqlrclient_prox
 $(SQLR)auth_sqlrclient_sqlrelay.$(LIBEXT): sqlrclient_sqlrelay.cpp sqlrclient_sqlrelay.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ sqlrclient_sqlrelay.$(OBJ) $(LDFLAGS) $(SQLRAUTH_SQLRELAYLIBS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)auth_mysql_connectstrings.$(LIBEXT): mysql_connectstrings.cpp mysql_connectstrings.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ mysql_connectstrings.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 $(SQLR)auth_mysql_userlist.$(LIBEXT): mysql_userlist.cpp mysql_userlist.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ mysql_userlist.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)auth_mysql_database.$(LIBEXT): mysql_database.cpp mysql_database.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ mysql_database.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
+$(SQLR)auth_postgresql_connectstrings.$(LIBEXT): postgresql_connectstrings.cpp postgresql_connectstrings.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ postgresql_connectstrings.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
 $(SQLR)auth_postgresql_userlist.$(LIBEXT): postgresql_userlist.cpp postgresql_userlist.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ postgresql_userlist.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
@@ -67,8 +75,10 @@ installdll:
 	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_database.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_proxied.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_sqlrclient_sqlrelay.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_connectstrings.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_userlist.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_database.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)auth_postgresql_connectstrings.$(LIBEXT) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)auth_postgresql_userlist.$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB) $(AUTHINSTALLSHAREDLIBOPTIONALTARGETS)
@@ -91,6 +101,10 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_proxied.a
 	$(RM) $(libexecdir)/$(SQLR)auth_sqlrclient_proxied.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_sqlrclient_proxied.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_connectstrings.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_mysql_connectstrings.a
+	$(RM) $(libexecdir)/$(SQLR)auth_mysql_connectstrings.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_mysql_connectstrings.so so $(MODULESUFFIX)
 	$(LTINSTALL) $(CP) $(SQLR)auth_mysql_userlist.$(LIBEXT) $(libexecdir)
 	$(RM) $(libexecdir)/$(SQLR)auth_mysql_userlist.a
 	$(RM) $(libexecdir)/$(SQLR)auth_mysql_userlist.$(LIBEXT)
@@ -99,6 +113,10 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)auth_mysql_database.a
 	$(RM) $(libexecdir)/$(SQLR)auth_mysql_database.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_mysql_database.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)auth_postgresql_connectstrings.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)auth_postgresql_connectstrings.a
+	$(RM) $(libexecdir)/$(SQLR)auth_postgresql_connectstrings.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)auth_postgresql_connectstrings.so so $(MODULESUFFIX)
 	$(LTINSTALL) $(CP) $(SQLR)auth_postgresql_userlist.$(LIBEXT) $(libexecdir)
 	$(RM) $(libexecdir)/$(SQLR)auth_postgresql_userlist.a
 	$(RM) $(libexecdir)/$(SQLR)auth_postgresql_userlist.$(LIBEXT)
@@ -121,8 +139,10 @@ uninstall:
 		$(libexecdir)/$(SQLR)auth_krb_userlist.* \
 		$(libexecdir)/$(SQLR)auth_tls_userlist.* \
 		$(libexecdir)/$(SQLR)auth_kerberos_userlist.* \
+		$(libexecdir)/$(SQLR)auth_mysql_connectstrings.* \
 		$(libexecdir)/$(SQLR)auth_mysql_userlist.* \
 		$(libexecdir)/$(SQLR)auth_mysql_database.* \
+		$(libexecdir)/$(SQLR)auth_postgresql_connectstrings.* \
 		$(libexecdir)/$(SQLR)auth_postgresql_userlist.* \
 		$(libexecdir)/$(SQLR)auth_connectstrings.* \
 		$(libexecdir)/$(SQLR)auth_userlist.* \
