documented *_connectstrings auth

--- a/doc/admin/parts/sqlrelay-auths-users-passwordfiles.conf
+++ b/doc/admin/parts/sqlrelay-auths-users-passwordfiles.conf
@@ -5,9 +5,9 @@
 		...
 		<auths>
 			<auth module="sqlrclient_userlist">
-				<user user="user1" password="[/usr/local/firstworks/etc/user1.pwd]"/>
-				<user user="user2" password="[/usr/local/firstworks/etc/user2.pwd]"/>
-				<user user="user3" password="[/usr/local/firstworks/etc/user3.pwd]"/>
+				<user user="oneuser" password="[/usr/local/firstworks/etc/oneuser.pwd]"/>
+				<user user="anotheruser" password="[/usr/local/firstworks/etc/anotheruser.pwd]"/>
+				<user user="yetanotheruser" password="[/usr/local/firstworks/etc/yetanotheruser.pwd]"/>
 			</auth>
 		</auths>
 		...
