--- a/doc/admin/parts/sqlrelay-postgresqlconnectstrings.conf
+++ b/doc/admin/parts/sqlrelay-postgresqlconnectstrings.conf
@@ -2,8 +2,11 @@
 <instances>
 	<instance id="example" dbase="postgresql">
 		<listeners>
-			<listener protocol="postgresql" port="5432" socket="/tmp/.s.PGSQL.5432"/>
+			<listener protocol="postgresql" port="5432"/>
 		</listeners>
+		<auths>
+			<auth module="postgresql_connectstrings"/>
+		</auths>
 		<connections>
 			<connection string="user=postgresqluser;password=postgresqlpassword;db=postgresqldb;host=postgresqlhost"/>
 		</connections>
