--- a/doc/admin/parts/sqlrelay-auths-users-passwordfiles-passwordpath.conf
+++ b/doc/admin/parts/sqlrelay-auths-users-passwordfiles-passwordpath.conf
@@ -5,9 +5,9 @@
 		...
 		<auths>
 			<auth module="sqlrclient_userlist">
-				<user user="user1" password="[user1.pwd]"/>
-				<user user="user2" password="[user2.pwd]"/>
-				<user user="user3" password="[user3.pwd]"/>
+				<user user="oneuser" password="[oneuser.pwd]"/>
+				<user user="anotheruser" password="[anotheruser.pwd]"/>
+				<user user="yetanotheruser" password="[yetanotheruser.pwd]"/>
 			</auth>
 		</auths>
 		...
