--- a/doc/admin/parts/sqlrelay-auths-users.conf
+++ b/doc/admin/parts/sqlrelay-auths-users.conf
@@ -5,9 +5,9 @@
 		...
 		<auths>
 			<auth module="sqlrclient_userlist">
-				<user user="user1" password="password1"/>
-				<user user="user2" password="password2"/>
-				<user user="user3" password="password3"/>
+				<user user="oneuser" password="onepassword"/>
+				<user user="anotheruser" password="anotherpassword"/>
+				<user user="yetanotheruser" password="yetanotherpassword"/>
 			</auth>
 		</auths>
 		...
