--- a/doc/admin/parts/sqlrelay-mysqlconnectstrings.conf
+++ b/doc/admin/parts/sqlrelay-mysqlconnectstrings.conf
@@ -2,8 +2,11 @@
 <instances>
 	<instance id="example" dbase="mysql">
 		<listeners>
-			<listener protocol="mysql" port="3307"/>
+			<listener protocol="mysql" port="3306"/>
 		</listeners>
+		<auths>
+			<auth module="mysql_connectstrings"/>
+		</auths>
 		<connections>
 			<connection string="user=mysqluser;password=mysqlpassword;db=mysqldb;host=mysqlhost"/>
 		</connections>
