added multi-protocol docs

--- a/doc/admin/parts/sqlrelay-multipleprotocols.conf
+++ b/doc/admin/parts/sqlrelay-multipleprotocols.conf
@@ -1,15 +1,13 @@
 <?xml version="1.0"?>
 <instances>
-
-	<instance id="multiprotocoltest" dbase="mysql">
+	<instance id="example" dbase="oracle">
 		<listeners>
 			<listener protocol="sqlrclient" port="9000"/>
 			<listener protocol="mysql" port="3306"/>
 			<listener protocol="postgresql" port="5432"/>
 		</listeners>
 		<connections>
-			<connection string="host=mysql;user=testuser;password=testpassword;db=@HOSTNAME@;foundrows=yes"/>
+			<connection string="user=scott;password=tiger;oracle_sid=orcl"/>
 		</connections>
 	</instance>
-
 </instances>
